tests/ui/diagnostic_namespace/on_unmatched_args/other_match_macro_error.stderr
error: invalid route method
  --> $DIR/other_match_macro_error.rs:12:12
   |
LL | macro_rules! route {
   | ------------------ when calling this macro
...
LL |     route!(post "/");
   |            ^^^^ no rules expected this token in macro call
   |
note: while trying to match `get`
  --> $DIR/other_match_macro_error.rs:8:6
   |
LL |     (get $path:literal) => {};
   |      ^^^
   = note: this macro expects a action, like `route!(get "/hello")`

error: aborting due to 1 previous error

